syntax = "proto3";

package team;

service TeamService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc FindOneById(FindOneByIdRequest) returns (FindResponse);
  rpc Join(JoinRequest) returns (JoinResponse);
  rpc Leave(LeaveRequest) returns (LeaveResponse);
}

message BaseResponse {
  string status = 1;
  string msg = 2;
  bool ok = 3;
}

message CreateRequest {
  string name = 1;
  string ownerId = 2;
  repeated string members = 3;
}
message CreateResponse {
  BaseResponse res = 1;
  optional string id = 3;
}

message UpdateRequest {
  string id = 1;
  string field = 2;
  string value = 3;
}
message UpdateResponse {
  BaseResponse res = 1;
}

message FindOneByIdRequest {
  string id = 1;
}
message FindResponse {
  BaseResponse res = 1;
  optional TeamResponse team = 3;
}

message JoinRequest {
  string id = 1;
}
message JoinResponse {
  BaseResponse res = 1;
}

message LeaveRequest {
  string id = 1;
}
message LeaveResponse {
  BaseResponse res = 1;
}

message TeamResponse{
  string id = 1;
  string name = 2;
  string ownerId = 3;
  repeated string members = 4;
}

